# backend

./: README.md  db.sqlite3  package-lock.json  pyproject.toml
config/: settings.py  urls.py
garagem/: admin.py
garagem/migrations/: 0001_initial.py  0002_acessorio_categoria_cor.py  0002_veiculo_imagem.py  0003_alter_cor_options_veiculo.py  0003_remove_veiculo_imagem.py  0004_remove_veiculo_marca_modelo_veiculo_modelo.py  0005_alter_veiculo_cor.py  0006_alter_veiculo_modelo.py  0007_alter_veiculo_cor_alter_veiculo_modelo.py  0008_veiculo_acessorio.py  0009_alter_veiculo_acessorio.py
garagem/models/: __init__.py  categoria.py  cor.py  modelo.py  veiculo.py
garagem/serializers/: __init__.py  acessorio.py  categoria.py  cor.py  marca.py  modelo.py  veiculo.py
garagem/views/: __init__.py  acessorio.py  categoria.py  cor.py  marca.py  modelo.py  veiculo.py
uploader/migrations/: 0001_initial.py
usuario/migrations/: 0001_initial.py
