[project]
name = "projetogaragem-django"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Gabz047", email = "gabe1612mail@gmail.com"},
]
dependencies = [
    "django>=5.0.3",
    "djangorestframework>=3.15.1",
    "django-cors-headers>=4.3.1",
    "python-dotenv>=1.0.1",
    "netifaces>=0.11.0",
    "drf-spectacular>=0.27.2",
    "django-extensions>=3.2.3",
    "pydotplus>=2.0.2",
    "graphviz>=0.20.3",
    "setuptools>=69.2.0",
    "unzip>=1.0.0",
    "zip>=0.0.2",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
pre_dev = "python ./scripts/set_my_ip.py"
dev = "python manage.py runserver 0.0.0.0:19003"
